@@ -704,6 +704,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3882. AggregatedLogFormat should close aclScanner and ownerScanner
     after create them. (zhihai xu via xgong)
 
+    YARN-3837. javadocs of TimelineAuthenticationFilterInitializer give wrong
+    prefix for auth options. (Bibin A Chundatt via devaraj)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
